issue #522 view report and schedule buttons aligned

--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -189,8 +189,9 @@
   overflow: initial;
 }
 
-.btn.view-report{
-  padding: 2px 4px;
+.btn.view-report,
+.btn.schedule-quiz{
+  padding: 2px 6px;
 }
 
 .table .checkbox{
